[project]
name = "gilded-rose"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kol Ratner", email = "60704569+kol-ratner@users.noreply.github.com"},
]
dependencies = [
    "pytest>=8.3.3",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
